--- a/doomdice.html
+++ b/doomdice.html
@@ -15,7 +15,7 @@
 
   <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" href="index.html">Paska haisee</a>
+  <a class="navbar-brand" href="index.html">Index</a>
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
