--- a/doomdice.html
+++ b/doomdice.html
@@ -89,7 +89,6 @@
 			<img class="green" src="">
 		
 			<img class="green2" src="">
-		
 	</div>
 
 	<div class="actions">
@@ -98,12 +97,13 @@
 	<button type="button" class="reset-button btn btn-warning btn-outline-dark">Reset dice</button>
 
 	</div>
+	
 </div>
 
 <footer class="page-footer font-small special-color-dark pt-4">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2021 Copyright: Sono Ö</div>
+  <div class="footer-copyright text-center py-3">© 2021 Sono Ö</div>
   <!-- Copyright -->
 
 </footer>
