--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
   			<img class="card-img-top" src="img/doomboardgame.jpg" alt="Card image">
   			<div class="card-body">
     			<h4 class="card-title">DoomDice</h4>
-    			<p class="card-text">Dice app for the Fantasy Flight games' Original 2004 Doom: The Boardgame.</p>
+    			<p class="card-text">Unofficial dice app for the Fantasy Flight games' Original 2004 Doom: The Boardgame.</p>
     			<a href="doomdice.html" class="btn btn-primary">To DoomDice</a>
+			
   			</div>
 		</div>
 
 	</div>
-
 
 </div>
 
