--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <li class="nav-item">
         <a class="nav-link" href="doomdice.html">DoomDice app</a>
       </li>
+	   <li class="nav-item">
+        <a class="nav-link" href="./bggapp/bggtools.php">BGG Tools</a>
+      </li>
     </ul>
   </div>
 </nav>
