--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a class="nav-link" href="doomdice.html">DoomDice app</a>
       </li>
 	   <li class="nav-item">
-        <a class="nav-link" href="./bggapp/bggtools.php">BGG Tools</a>
+        <a class="nav-link" href="bggtools.html">BGG Tools</a>
       </li>
     </ul>
   </div>
