--- a/bggtools.html
+++ b/bggtools.html
@@ -43,7 +43,7 @@
 	<div class="container">
 		<p>View your personal boardgame collection</p>
 
-		<form action="./bggapp/usercollection.php" method="get">
+		<form action="usercollection.php" method="get">
 		<div class="form-group>">
 			<label for="text"><b>BGG username:</b></label> 
 			<input type="text" class="form-control" name="name" placeholder="Enter username"><br>
@@ -57,7 +57,7 @@
 	<div class="container">
 		<p>Find a new game from the <b>TOP 100</b> boardgames list</p>
 		
-		<form action="./bggapp/gameselector.php" method="get">
+		<form action="gameselector.php" method="get">
 		<div class="form-group>">
 			<label for="text"><b>BGG username:</b></label> 
 			<input type="text" name="name"  class="form-control" placeholder="Enter username"><br>
